chore: プロジェクトの説明を更新

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "picoctf-archive"
 version = "0.1.0"
-description = "Add your description here"
+description = "My picoCTF archive"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
